exports[`bastion-host with custom instance name 1`] = `
{
  "Outputs": {
    "BastionHostBastionInstanceIdA112C7FD": {
      "Value": {
        "Ref": "BastionHostInstance82B9AD9B",
      },
    },
  },
  "Parameters": {
    "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
    },
  },
  "Resources": {
    "BastionHostInstance82B9AD9B": {
      "DependsOn": [
        "BastionHostInstanceInstanceRoleDefaultPolicy662FC168",
        "BastionHostInstanceInstanceRoleA39BE04A",
      ],
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "IamInstanceProfile": {
          "Ref": "BastionHostInstanceInstanceProfileB1DB546D",
        },
        "ImageId": {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "InstanceType": "t3.nano",
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "BastionHostSecurityGroup8CA70F42",
              "GroupId",
            ],
          },
        ],
        "SubnetId": {
          "Fn::ImportValue": "Stack1:ExportsOutputRefVpcPublicSubnet1Subnet5C2D37C4FFA2B456",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "CustomInstanceName",
          },
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#!/bin/bash
PG_PKG=$(dnf repoquery -q --qf='%{name}' 'postgresql[0-9]*' | grep -v '-' | sort -V | tail -1)
MARIA_PKG=$(dnf repoquery -q --qf='%{name}' 'mariadb[0-9]*' | grep -v '-' | sort -V | tail -1)
dnf install -y https://amazon-ssm-",
                {
                  "Ref": "AWS::Region",
                },
                ".s3.amazonaws.com/latest/linux_amd64/amazon-ssm-agent.rpm socat "\${PG_PKG:-postgresql18}" "\${MARIA_PKG:-mariadb1011}"",
              ],
            ],
          },
        },
      },
      "Type": "AWS::EC2::Instance",
    },
    "BastionHostInstanceInstanceProfileB1DB546D": {
      "Properties": {
        "Roles": [
          {
            "Ref": "BastionHostInstanceInstanceRoleA39BE04A",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "BastionHostInstanceInstanceRoleA39BE04A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "CustomInstanceName",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "BastionHostInstanceInstanceRoleDefaultPolicy662FC168": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ssm:ListInstanceAssociations",
                "ssm:UpdateInstanceInformation",
                "ssm:GetDocument",
                "ssm:PutInventory",
                "ssm:UpdateInstanceAssociationStatus",
                "ssmmessages:CreateControlChannel",
                "ssmmessages:CreateDataChannel",
                "ssmmessages:OpenControlChannel",
                "ssmmessages:OpenDataChannel",
                "ec2messages:AcknowledgeMessage",
                "ec2messages:DeleteMessage",
                "ec2messages:FailMessage",
                "ec2messages:GetEndpoint",
                "ec2messages:GetMessages",
                "ec2messages:SendReply",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "BastionHostInstanceInstanceRoleDefaultPolicy662FC168",
        "Roles": [
          {
            "Ref": "BastionHostInstanceInstanceRoleA39BE04A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "BastionHostSecurityGroup8CA70F42": {
      "Properties": {
        "GroupDescription": "Stack2/BastionHost/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": {
          "Fn::ImportValue": "Stack1:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
  },
}
`;

exports[`bastion-host with custom security group 1`] = `
{
  "Outputs": {
    "BastionHostBastionInstanceIdA112C7FD": {
      "Value": {
        "Ref": "BastionHostInstance82B9AD9B",
      },
    },
  },
  "Parameters": {
    "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
    },
  },
  "Resources": {
    "BastionHostInstance82B9AD9B": {
      "DependsOn": [
        "BastionHostInstanceInstanceRoleDefaultPolicy662FC168",
        "BastionHostInstanceInstanceRoleA39BE04A",
      ],
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "IamInstanceProfile": {
          "Ref": "BastionHostInstanceInstanceProfileB1DB546D",
        },
        "ImageId": {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "InstanceType": "t3.nano",
        "SecurityGroupIds": [
          {
            "Fn::ImportValue": "Stack1:ExportsOutputFnGetAttCustomSecurityGroupE5E500E5GroupId0E4C9A2D",
          },
        ],
        "SubnetId": {
          "Fn::ImportValue": "Stack1:ExportsOutputRefVpcPublicSubnet1Subnet5C2D37C4FFA2B456",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Bastion",
          },
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#!/bin/bash
PG_PKG=$(dnf repoquery -q --qf='%{name}' 'postgresql[0-9]*' | grep -v '-' | sort -V | tail -1)
MARIA_PKG=$(dnf repoquery -q --qf='%{name}' 'mariadb[0-9]*' | grep -v '-' | sort -V | tail -1)
dnf install -y https://amazon-ssm-",
                {
                  "Ref": "AWS::Region",
                },
                ".s3.amazonaws.com/latest/linux_amd64/amazon-ssm-agent.rpm socat "\${PG_PKG:-postgresql18}" "\${MARIA_PKG:-mariadb1011}"",
              ],
            ],
          },
        },
      },
      "Type": "AWS::EC2::Instance",
    },
    "BastionHostInstanceInstanceProfileB1DB546D": {
      "Properties": {
        "Roles": [
          {
            "Ref": "BastionHostInstanceInstanceRoleA39BE04A",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "BastionHostInstanceInstanceRoleA39BE04A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Bastion",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "BastionHostInstanceInstanceRoleDefaultPolicy662FC168": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ssm:ListInstanceAssociations",
                "ssm:UpdateInstanceInformation",
                "ssm:GetDocument",
                "ssm:PutInventory",
                "ssm:UpdateInstanceAssociationStatus",
                "ssmmessages:CreateControlChannel",
                "ssmmessages:CreateDataChannel",
                "ssmmessages:OpenControlChannel",
                "ssmmessages:OpenDataChannel",
                "ec2messages:AcknowledgeMessage",
                "ec2messages:DeleteMessage",
                "ec2messages:FailMessage",
                "ec2messages:GetEndpoint",
                "ec2messages:GetMessages",
                "ec2messages:SendReply",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "BastionHostInstanceInstanceRoleDefaultPolicy662FC168",
        "Roles": [
          {
            "Ref": "BastionHostInstanceInstanceRoleA39BE04A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`minimal bastion-host 1`] = `
{
  "Outputs": {
    "BastionHostBastionInstanceIdA112C7FD": {
      "Value": {
        "Ref": "BastionHostInstance82B9AD9B",
      },
    },
  },
  "Parameters": {
    "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
    },
  },
  "Resources": {
    "BastionHostInstance82B9AD9B": {
      "DependsOn": [
        "BastionHostInstanceInstanceRoleDefaultPolicy662FC168",
        "BastionHostInstanceInstanceRoleA39BE04A",
      ],
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "IamInstanceProfile": {
          "Ref": "BastionHostInstanceInstanceProfileB1DB546D",
        },
        "ImageId": {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "InstanceType": "t3.nano",
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "BastionHostSecurityGroup8CA70F42",
              "GroupId",
            ],
          },
        ],
        "SubnetId": {
          "Fn::ImportValue": "Stack1:ExportsOutputRefVpcPublicSubnet1Subnet5C2D37C4FFA2B456",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Bastion",
          },
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#!/bin/bash
PG_PKG=$(dnf repoquery -q --qf='%{name}' 'postgresql[0-9]*' | grep -v '-' | sort -V | tail -1)
MARIA_PKG=$(dnf repoquery -q --qf='%{name}' 'mariadb[0-9]*' | grep -v '-' | sort -V | tail -1)
dnf install -y https://amazon-ssm-",
                {
                  "Ref": "AWS::Region",
                },
                ".s3.amazonaws.com/latest/linux_amd64/amazon-ssm-agent.rpm socat "\${PG_PKG:-postgresql18}" "\${MARIA_PKG:-mariadb1011}"",
              ],
            ],
          },
        },
      },
      "Type": "AWS::EC2::Instance",
    },
    "BastionHostInstanceInstanceProfileB1DB546D": {
      "Properties": {
        "Roles": [
          {
            "Ref": "BastionHostInstanceInstanceRoleA39BE04A",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "BastionHostInstanceInstanceRoleA39BE04A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Bastion",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "BastionHostInstanceInstanceRoleDefaultPolicy662FC168": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ssm:ListInstanceAssociations",
                "ssm:UpdateInstanceInformation",
                "ssm:GetDocument",
                "ssm:PutInventory",
                "ssm:UpdateInstanceAssociationStatus",
                "ssmmessages:CreateControlChannel",
                "ssmmessages:CreateDataChannel",
                "ssmmessages:OpenControlChannel",
                "ssmmessages:OpenDataChannel",
                "ec2messages:AcknowledgeMessage",
                "ec2messages:DeleteMessage",
                "ec2messages:FailMessage",
                "ec2messages:GetEndpoint",
                "ec2messages:GetMessages",
                "ec2messages:SendReply",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "BastionHostInstanceInstanceRoleDefaultPolicy662FC168",
        "Roles": [
          {
            "Ref": "BastionHostInstanceInstanceRoleA39BE04A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "BastionHostSecurityGroup8CA70F42": {
      "Properties": {
        "GroupDescription": "Stack2/BastionHost/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": {
          "Fn::ImportValue": "Stack1:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
  },
}
`;
